--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
+"build": "react-scripts --openssl-legacy-provider build",
+    
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "build": "react-scripts build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
